--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             overflow: hidden;
             text-align: center;
         }
         h1 {
             color: #FF6F91; /* Romantic pink */
-            font-size: 2.5em;
-            margin-bottom: 20px;
+            font-size: 2.2em;
+            margin-bottom: 15px;
             text-shadow: 2px 2px #FFC2D1;
         }
         .heart {
             position: absolute;
-            top: 5%;
+            top: 4%;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 4em;
+            font-size: 3.5em;
             color: #FF6F91;
             animation: heartbeat 1.5s infinite;
         }
@@ -43,7 +43,7 @@
         }
         .gif-container {
             width: 90%;
-            max-width: 400px;
+            max-width: 350px;
             margin: 20px auto;
             background: rgba(255, 239, 243, 0.8); /* Match theme with a translucent overlay */
             border-radius: 20px;
@@ -55,6 +55,22 @@
             font-size: 1em;
             color: #3E350E;
             font-weight: bold;
+        }
+        @media (max-width: 430px) {
+            h1 {
+                font-size: 1.8em;
+            }
+            .heart {
+                font-size: 3em;
+                top: 5%;
+            }
+            .gif-container {
+                max-width: 300px;
+                padding: 8px;
+            }
+            footer {
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
@@ -68,6 +84,6 @@
         </div>
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     </div>
-    <footer> virtual roses With love, always and forever yours cute griffin .</footer>
+    <footer> Virtual roses from your cute griffin with love always and forever.</footer>
 </body>
 </html>
